--- a/anhf-portal/tsconfig.json
+++ b/anhf-portal/tsconfig.json
@@ -14,6 +14,7 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
+    "useDefineForClassFields": false,
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
