--- a/anhf-portal/tsconfig.json
+++ b/anhf-portal/tsconfig.json
@@ -19,14 +19,12 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
+    "strictActionImmutability": false,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
